--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -25,6 +25,7 @@
               <code><span class='token operator'>!</span></code>,
               <code><span class='token punctuation'>(</span></code>,
               <code><span class='token punctuation'>)</span></code>,
+              <code><span class='token string'>:</span></code>,
               <code><span class='token string'>'</span></code> and
               <code><span class='token string'>"</span></code>.<br>
               <em><code><span class='token string'>termA</span></code></em> or
@@ -119,6 +120,8 @@
           <dd><a href='#dateFormats'>See accepted date formats below</a></dd>
           <dt><span class='token keyword'>elabid</span></dt>
           <dd>Term or Quoted term</dd>
+          <dt><span class='token keyword'>extrafield</span></dt>
+          <dd>Different syntax: <span class='token keyword'>extrafield</span><span class='token punctuation'>:</span><span class='token keyword'>s</span><span class='token punctuation'>:</span><span class='token string'>key</span><span class='token punctuation'>:</span><span class='token string'>value</span>.<br><span class='token string'>key</span> and <span class='token string'>value</span> can be a Term or Quoted term</dd>
           <dt><span class='token keyword'>group</span></dt>
           <dd>Term or Quoted term</dd>
           <dt><span class='token keyword'>id</span></dt>
