--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -18,11 +18,21 @@
       <h4>{% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}</h4>
       {% include 'create-new.html' with {'entityPage': 'experiments.php'} %}
     </div>
+    <hr>
     {% if experimentsCategoryArr %}
       <h5>{{ 'Browse by category'|trans }}</h5>
       <div class='d-flex my-2 flex-wrap lh-150'>
         {% for category in experimentsCategoryArr %}
         <a href='experiments.php?mode=show&cat={{ category.id }}'><span style='--bg: #{{ category.color }}' class='catstat-btn category-btn mr-2'>{{ category.title|raw }}</a>
+        {% endfor %}
+      </div>
+      <hr>
+    {% endif %}
+    {% if experimentsStatusArr %}
+      <h5>{{ 'Browse by status'|trans }}</h5>
+      <div class='d-flex my-2 flex-wrap lh-150'>
+        {% for status in experimentsStatusArr %}
+        <a href='experiments.php?mode=show&status={{ status.id }}'><span style='--bg: #{{ status.color }}' class='catstat-btn status-btn mr-2'><i class='fas fa-circle fa-fw' style='--bg:#{{ status.color }}'></i> {{ status.title|raw }}</a>
         {% endfor %}
       </div>
       <hr>
@@ -39,6 +49,7 @@
       <h4>{% trans %}Resource{% plural 2 %}Resources{% endtrans %}</h4>
       {% include 'create-new.html' with {'entityPage': 'database.php'} %}
     </div>
+    <hr>
     <h5>{{ 'Browse by category'|trans }}</h5>
     <div class='d-flex my-2 flex-wrap lh-150'>
       {% for category in categoryArr %}
@@ -46,6 +57,15 @@
       {% endfor %}
     </div>
     <hr>
+    {% if itemsStatusArr %}
+      <h5>{{ 'Browse by status'|trans }}</h5>
+      <div class='d-flex my-2 flex-wrap lh-150'>
+        {% for status in itemsStatusArr %}
+        <a href='database.php?mode=show&status={{ status.id }}'><span style='--bg: #{{ status.color }}' class='catstat-btn status-btn mr-2'><i class='fas fa-circle fa-fw' style='--bg:#{{ status.color }}'></i> {{ status.title|raw }}</a>
+        {% endfor %}
+      </div>
+      <hr>
+    {% endif %}
     <h5>{{ 'Last modified resources'|trans }}</h5>
     <ul class='list-group mt-1'>
       {% for item in itemsArr %}
