fix status title color on dashboard

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -871,6 +871,7 @@ the form-control fails to do that so we do the border ourselves */
     /* Only Status */
     &.status-btn {
         background-color: $firstlevel;
+        color: $mediumstrong;
 
         &:hover {
             background-color: $secondlevel;
