--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -11,7 +11,7 @@
     {% if favTagsArr|length == 0 %}
       <p>{{ 'No favorite tags are present. Add an existing tag with the form below.'|trans }}</p>
     {% endif %}
-    <div class='d-flex flex-column'>
+    <div id='favtagsTagsDiv' class='d-flex flex-column'>
       {% for favtag in favTagsArr %}
       <div data-action='add-tag-filter' data-tag='{{ favtag.tag }}' class='side-panel-item {{ App.Request.query.all('tags')[0] == favtag.tag ? 'selected' : '' }}'>
         {{ favtag.tag }}<a href='#' class='float-right mr-2' data-id='{{ favtag.tags_id }}' data-action='destroy-favtags'><i class='fas fa-trash-alt'></i></a>
@@ -21,7 +21,7 @@
     <hr>
     {# ADD TAG AS FAVORITE INPUT #}
     <div class='input-group mt-2 mb-3'>
-      <input id='createFavTagInput' data-autocomplete='tags' type='text' class='form-control form-inline createFavTagInput' aria-label='{{ 'Add a tag as favorite'|trans }}' placeholder='{{ 'Add a tag as favorite'|trans }}'>
+      <input id='createFavTagInput' data-autocomplete='tags' type='text' class='form-control form-inline createTagInputFavorite' aria-label='{{ 'Add a tag as favorite'|trans }}' placeholder='{{ 'Add a tag as favorite'|trans }}'>
       <div class='input-group-append'>
         <button class='btn btn-primary' type='button' title='{{ 'Add'|trans }}' data-action='create-todoitem' aria-label='{{ 'Add'|trans }}'>
           <i class='fas fa-plus fa-fw' title='{{ 'Add'|trans }}'></i>
