--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -47,6 +47,7 @@
     <div class='pl-3'>
       {% if usersArr %}
         {% for user in usersArr %}
+          {% include('archive-user-modal.html') %}
           {# Modal for managing users to teams, generated for each user #}
           <div class='modal fade' id='manageUsers2teamsModal_{{ user.userid }}' tabindex='-1' role='dialog' aria-label='{{ 'Manage teams for user'|trans }}' aria-hidden='true'>
             <div class='modal-dialog modal-xl' role='document'>
@@ -216,11 +217,11 @@
                       {% endif %}
                       {# ARCHIVE USER #}
                       {% if user.archived %}
-                        <div class='dropdown-item' data-action='toggle-archive-user' data-userid='{{ user.userid }}'>
+                        <div class='dropdown-item' data-action='toggle-modal' data-target='archiveUserModal_{{ user.userid }}'>
                           <i class='fas fa-fw fa-box-archive mr-1'></i>{{ 'Unarchive user'|trans }}
                         </div>
                       {% else %}
-                        <div class='dropdown-item' data-action='toggle-archive-user' data-userid='{{ user.userid }}'>
+                      <div class='dropdown-item' data-action='toggle-modal' data-target='archiveUserModal_{{ user.userid }}'>
                           <i class='fas fa-fw fa-box-archive mr-1'></i>{{ 'Archive user'|trans }}
                         </div>
                       {% endif %}
