--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1147,6 +1147,16 @@ input[type='color'] {
 .admin-badge {
     background-color: $lightblue;
     border: 1px solid $gold;
+    position: relative;
+
+    &::before {
+        color: $dangerred;
+        content: 'Admin';
+        left: 0;
+        font-size: 75%;
+        position: absolute;
+        top: -16px;
+    }
 }
 
 /* give the togglePassword some borders like input */
