add custom_id column to entities
and change how the click on Create for Experiments now displays a
choice of categories

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1159,6 +1159,12 @@ input[type='color'] {
     }
 }
 
+.custom-id-badge {
+    color: $medium;
+    padding: 0.25rem;
+}
+
+
 /* give the togglePassword some borders like input */
 .input-border {
     border: 1px solid #ced4da;
