--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -54,6 +54,8 @@
           <a class='dropdown-item {{ (App.Request.query.get('order') == 'status' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='status-asc' href='#'>{{ 'Status (inverted)'|trans }}</a>
           <a class='dropdown-item {{ (App.Request.query.get('order') == 'id' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='id-desc' href='#'>{{ 'Highest ID'|trans }}</a>
           <a class='dropdown-item {{ (App.Request.query.get('order') == 'id' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='id-asc' href='#'>{{ 'Lowest ID'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'customid' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='customid-desc' href='#'>{{ 'Highest Custom ID'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'customid' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='customid-asc' href='#'>{{ 'Lowest Custom ID'|trans }}</a>
           <a class='dropdown-item {{ (App.Request.query.get('order') == 'comment' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='comment-desc' href='#'>{{ 'Recently commented'|trans }}</a>
           <a class='dropdown-item {{ (App.Request.query.get('order') == 'title' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='title-asc' href='#'>{{ 'Title (alphabetical)'|trans }}</a>
           <a class='dropdown-item {{ (App.Request.query.get('order') == 'title' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='title-desc' href='#'>{{ 'Title (inverted)'|trans }}</a>
