--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -206,7 +206,7 @@
 {# TAB 4 CATEGORIES #}
 <div data-tabcontent='4' hidden>
   {# EXPERIMENTS CATEGORIES #}
-  <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Experiments categories'|trans }}</h3>
+  <h3 id='experimentsCategoriesAnchor' class='mb-3 p-2 pl-3 section-title'>{{ 'Experiments categories'|trans }}</h3>
   <div class='pl-3 mb-5' id='experiments_categoriesDiv'>
     <div class='mb-2 d-flex justify-content-between'>
       <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
@@ -254,7 +254,7 @@
   </div>
 
   {# RESOURCES CATEGORIES #}
-  <h3 id='resourcesCategoriesAnchor' class='mb-3 p-2 pl-3 section-title'>{{ 'Resources categories'|trans }}</h3>
+  <h3 id='itemsCategoriesAnchor' class='mb-3 p-2 pl-3 section-title'>{{ 'Resources categories'|trans }}</h3>
   <div class='pl-3'>
     <div {{ App.Request.query.has('templateid') ? 'hidden' }}>
       <div class='d-flex justify-content-between'>
