--- a/src/templates/show-view-edit.html
+++ b/src/templates/show-view-edit.html
@@ -1,4 +1,5 @@
-{% include 'create-new-item-modal.html' %}
+{% include 'create-new-item-modal.html' with {'entityType': 'experiments'} %}
+{% include 'create-new-item-modal.html' with {'entityType': 'items'} %}
 {# Modal for import #}
 <div class='modal fade' id='importModal' tabindex='-1' role='dialog' aria-labelledby='importModalLabel' aria-hidden='true'>
   <div class='modal-dialog' role='document'>
