--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -32,7 +32,7 @@
 <section>
 
   {# DATE and RATING #}
-  <div class='d-flex'>
+  <div class='d-flex mb-1'>
     {# DATE #}
     <div class='color-medium'>
       {{ 'Started on'|trans }} {{ Entity.entityData.date|date('Y-m-d') }}
@@ -45,9 +45,11 @@
     </div>
   </div>
 
+  {# CUSTOM ID #}
   {# TITLE #}
-  <h1 id='documentTitle' class='mb-4 title text-dark malleableColumn hl-hover-gray py-1 rounded' data-target='title' data-endpoint='{{ Entity.type }}' data-id='{{ Entity.id }}'>
-    {{ Entity.entityData.title|raw }}
+  <h1 class='mb-4 text-dark' >
+  <span title='{{ 'Custom ID'|trans }}' class='custom-id-badge'>{{ Entity.entityData.custom_id }}</span>
+  <span id='documentTitle' class='breakable malleableColumn hl-hover-gray rounded py-1' data-target='title' data-endpoint='{{ Entity.type }}' data-id='{{ Entity.id }}'>{{ Entity.entityData.title|raw }}</span>
   </h1>
 
   {% include('catstat-view.html') %}
