--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -48,7 +48,9 @@
   {# CUSTOM ID #}
   {# TITLE #}
   <h1 class='mb-4 text-dark' >
-  <span title='{{ 'Custom ID'|trans }}' class='custom-id-badge'>{{ Entity.entityData.custom_id }}</span>
+  {% if Entity.entityData.custom_id %}
+    <span title='{{ 'Custom ID'|trans }}' class='custom-id-badge'>{{ Entity.entityData.custom_id }}</span>
+  {% endif %}
   <span id='documentTitle' class='breakable malleableColumn hl-hover-gray rounded py-1' data-target='title' data-endpoint='{{ Entity.type }}' data-id='{{ Entity.id }}'>{{ Entity.entityData.title|raw }}</span>
   </h1>
 
