make the uploads migrator tool to s3 fix links in body too
fix #4777

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -494,13 +494,13 @@
 
     <div class='d-flex justify-content-between'>
       <label for='s3_region' class='col-form-label'>S3 region</label>
-      <input class='form-control col-md-3' type='text' id='s3_region' placeholder='uploads' data-trigger='blur' data-model='config' data-target='s3_region' value='{{ App.Config.configArr.s3_region }}' />
+      <input class='form-control col-md-3' type='text' id='s3_region' placeholder='fr-par' data-trigger='blur' data-model='config' data-target='s3_region' value='{{ App.Config.configArr.s3_region }}' />
     </div>
     <hr>
 
     <div class='d-flex justify-content-between'>
       <label for='s3_endpoint' class='col-form-label'>S3 endpoint</label>
-      <input class='form-control col-md-3' type='url' id='s3_endpoint' placeholder='uploads' data-trigger='blur' data-model='config' data-target='s3_endpoint' value='{{ App.Config.configArr.s3_endpoint }}' />
+      <input class='form-control col-md-3' type='url' id='s3_endpoint' placeholder='https://s3.example.org' data-trigger='blur' data-model='config' data-target='s3_endpoint' value='{{ App.Config.configArr.s3_endpoint }}' />
     </div>
     <hr>
 
